minecraft-server/gtnh_Deployment_minecraft-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtnh
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: gtnh
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: gtnh
    spec:
      containers:
      - image: ghcr.io/ocf/minecraft-server-gtnh:c005fa902943fef52e4dfb64b5b6b4b8128a13e2
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 25565
        volumeMounts:
        - mountPath: /data
          name: data
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gtnh
