minecraft-server/ocfmc-1-21-8_Deployment_minecraft-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocfmc-1-21-8
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: ocfmc-1-21-8
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: ocfmc-1-21-8
    spec:
      containers:
      - image: ghcr.io/ocf/minecraft-server-ocfmc-1-21-8:d61991627221d36599f39c5a8abde7216c0c59fa
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 25565
        volumeMounts:
        - mountPath: /data
          name: data
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ocfmc-1-21-8
