minecraft-server/ocfmc-1.21.8_Deployment_minecraft-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocfmc-1.21.8
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: ocfmc-1.21.8
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: ocfmc-1.21.8
    spec:
      containers:
      - image: ghcr.io/ocf/minecraft-server-ocfmc-1.21.8:2f4fd2cdf480c4caa5ba749550571e4b5a42ab01
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 25565
        volumeMounts:
        - mountPath: /data
          name: data
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: ocfmc-1.21.8
