minecraft-server/ocfmc-1-21-8_Service_minecraft-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocfmc-1-21-8
spec:
  ports:
  - port: 25565
    targetPort: 25565
  selector:
    transpire.ocf.io/deployment: ocfmc-1-21-8
status:
  loadBalancer:
    ingress:
    - ip: 169.229.226.85
      ipMode: vip
