minecraft-server/ocfmc-1-21-8_Ingress_minecraft-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: ocfmc-1-21-8
spec:
  ingressClassName: contour
  rules:
  - host: mc.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocfmc-1-21-8
            port:
              number: 25565
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mc.ocf.berkeley.edu
    secretName: ocfmc-1-21-8-tls
